[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
tokio = { version = "1", features = ["full"] }
mime_guess = "2.0"
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.5.3"
http-body-util = "0.1.3"
tower-http = { version = "0.6.9", features = ["fs"] }
